# Cashflowmanager

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_simulation.py
.github/workflows/: hf_sync.yml
cashflowmanager/: Dockerfile  README.md  pyproject.toml
cashflowmanager/.github/workflows/: hf_sync.yml
cashflowmanager/server/: __init__.py  cashflowmanager_environment.py  client.py  reward.py
notebooks/: CFO_RL_Train.ipynb  CFO_SFT_Training_LLama.ipynb
scripts/: validate-submission.sh
server/: app.py  cashflowmanager_environment.py  client.py  reward.py  tasks.py
