# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-cashflowmanager"
version = "0.1.0"
description = "Cashflowmanager environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "gradio>=6.10.0",
    "groq>=1.1.2",
    # Core OpenEnv runtime (provides FastAPI server + HTTP client types)
    # install from github
    # "openenv-core[core] @ git+https://github.com/meta-pytorch/OpenEnv.git",
    "numpy>=2.2.6",
    "openenv-core[core]>=0.2.2",
    # Environment-specific dependencies
    "python-dotenv>=1.2.2",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.24.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m cashflowmanager.server.app
server = "cashflowmanager.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["cashflowmanager", "cashflowmanager.server"]
package-dir = { "cashflowmanager" = ".", "cashflowmanager.server" = "server" }
